@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST rails_best_practices-0.4.0.gem 21504 RMD160 4b0e70206cd123df1ef62cd5dc16708b974a9046 SHA1 1e0ba3cdd0ae7fa6a2b8ebace43907fd4cd8ff6e SHA256 ba0116a8e5a8bdea96a540d9113c1dd44e132ac71ace58963fd4ee1c9f9de245
+DIST rails_best_practices-0.7.1.gem 45056 RMD160 807cd2403a514bc61cd3f0658dd52035446116a6 SHA1 6a5ab8744a84f9b74d9d2334623b12c461974fb3 SHA256 dce38733e505a28905da6e31c0242cebdd050401f8cf07fb1998bee9e63ab419
 EBUILD rails_best_practices-0.4.0.ebuild 763 RMD160 6a42abe9c79867346433de5038133e2c427ec9b0 SHA1 0d085007b557725291f96940c61ed14c6c3a9916 SHA256 c8bad2bf81dcd59b53a9683aea1ec5268e8959015a744de02fa337c0cbd289b9
-MISC ChangeLog 891 RMD160 300a9a314b85aa9d388bc42886a5aea7788d3c0e SHA1 ccf575b146bd956d962cb55002b8d386f026110d SHA256 e6938c9583e6eb54f3e5b38121842a1a1cb779fec3d3780386b269151f8618ef
+EBUILD rails_best_practices-0.7.1.ebuild 972 RMD160 48c19520d7a38a2c41f7fa3fc24de20c585d0fd4 SHA1 0e770cd477a02aafc9ce92a8d7fdcaf0119670ac SHA256 7c4d111520ebb967f6823028eec5a0c90f90e566bd85ea2295fa77051b9a88e3
+MISC ChangeLog 1039 RMD160 cce7155531928b823552d4ab1628e60cd904541a SHA1 b450f5aa8f9fbe5662b3e7f72aebfa467d952797 SHA256 0e3b8509c4697c92a0bc0c70d650ffa9d6f15b05eb9f42d99fb32efc56d482f5
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk0+yCAACgkQrnu0mw69JkpjHwD+MfGOooc8hDz081omx3XOJ5O+
-QCwHwEJDRz6NsP6XoEwA/20C6RHxJSMMSb2ZO+k4p6TaHz6ANHIFuQ2KCXrbopo/
-=vbSh
+iF4EAREIAAYFAk1zROoACgkQrnu0mw69JkrulgD/WDpVv8knYRLwGArhtc6xtADX
+9dw6fkFtXwIgFgjEGbAA/RQOZ5s7vxHLL61vFFj0zkzLXM7pxCjWcmbBvQs724eA
+=hGY7
 -----END PGP SIGNATURE-----
